# paper-test

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  fetch_arxiv.py  pyproject.toml  visualize.py  visualize_latex.py  visualize_results.py
.claude/skills/: wrap-up.md
data/arxiv/: manifest.tsv
examples/annotated/: README.md  sample_clean.json  sample_clean.md  sample_clean_notes.md  sample_dangling_ref.json  sample_dangling_ref.md  sample_dangling_ref_notes.md  sample_hallucinated_cite.json  sample_hallucinated_cite.md  sample_hallucinated_cite_notes.md  sample_overclaim.json  sample_overclaim.md  sample_overclaim_notes.md  sample_statbug.json  sample_statbug.md  sample_statbug_notes.md
papercheck/: __init__.py  cli.py  config.py  models.py  pipeline.py
papercheck/cache/: store.py
papercheck/checkers/: claim_alignment.py  math_consistency.py  statcheck.py  xref_integrity.py
papercheck/extractors/: claims.py  equations.py  metadata.py  references.py  statistics.py
papercheck/layers/: __init__.py  base.py  layer1_formal.py  layer2_citations.py  layer3_corpus.py  layer4_reproducibility.py  layer5_logic.py  layer6_reward.py
papercheck/llm/: client.py  prompts.py  schemas.py
papercheck/parsing/: grobid_parser.py  latex_parser.py  paper_loader.py  pdf_parser.py
papercheck/report/: json_report.py  markdown_report.py
papercheck/reward_model/: __init__.py  calibration.py  concern_generator.py  data_ingestion.py  data_processing.py  (+5 more)
papers/: test_paper.tex
plans/: PLAN.md  PLAN_v2.md
references/: citations.md  latex.md  structure.md  style.md
(+40 files in other folders)
